service-mesh/apps/manifest/base/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: quay.io/rh_rh/ocp-webstore-ui:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        startupProbe:
          httpGet:
            path: /metrics
            port: http
          failureThreshold: 30
          periodSeconds: 2
        readinessProbe:
          httpGet:
            path: /metrics
            port: http
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /metrics
            port: http
          periodSeconds: 15
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: ui
